fixed pagination alignement in firefox

--- a/mysite/assets/scss/components/_pagination.scss
+++ b/mysite/assets/scss/components/_pagination.scss
@@ -3,14 +3,23 @@
 	display:inline-block;
 	margin: auto;
 	padding:0px;
+	height: $default-input-height;
 
 	span {
 		color: palette-get(na-black);
 		margin-right: 0px;
+    	float: left;
+    	position: relative;
+    	display: inline-block;
+    	top: 50%;
+    	transform: translateY(-50%);
+    	-moz-transform: translateY(-50%);
+    	-webkit-transform: translateY(-50%);
 	}
 	
 	&__form {
 		display: inline-block;
+		float: left;
 	}
 
 	&__input {
@@ -23,19 +32,28 @@
 
 	a {
 		margin-left: $pagination-spacing;
+		float: left;
+		display: inline-block;
+		top: 50%;
+		position: relative;
+    	transform: translateY(-50%);
+    	-moz-transform: translateY(-50%);
+    	-webkit-transform: translateY(-50%);
 	}
 
 	&__arrow {
+		float: left;
 		position: relative;
 		top: 50%;
 		transform:translateY(-50%);
 		-webkit-transform:translateY(-50%);
     	-ms-transform:translateY(-50%);
-		height: 12px;
-		padding-left: 5px;
-		padding-right: 5px;
+		margin-left: 7px;
+		margin-right: 7px;
 
 		svg {
+			float: left;
+			position: relative;
 			height: 12px;
 			width: 12px;
 
